--- a/homeVersion4.html
+++ b/homeVersion4.html
@@ -257,8 +257,8 @@
             <div class="step">
                 <!-- Step 1 SVG -->
                 <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="3" y="3" width="18" height="18" rx="4" stroke="#030303" stroke-width="2"/>
-                    <path d="M7 12H17M7 8H17M7 16H12" stroke="#030303" stroke-width="2"/>
+                    <rect x="3" y="3" width="18" height="18" rx="4" stroke="#900C3F" stroke-width="2"/>
+                    <path d="M7 12H17M7 8H17M7 16H12" stroke="#900C3F" stroke-width="2"/>
                 </svg>
                 <p><strong>Enter Details</strong><br>Provide your basic details</p>
             </div>
@@ -266,8 +266,8 @@
             <div class="step">
                 <!-- Step 2 SVG -->
                 <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="10" cy="10" r="6" stroke="#030303" stroke-width="2"/>
-                    <path d="M14 14L20 20" stroke="#030303" stroke-width="2"/>
+                    <circle cx="10" cy="10" r="6" stroke="#900C3F" stroke-width="2"/>
+                    <path d="M14 14L20 20" stroke="#900C3F" stroke-width="2"/>
                 </svg>
                 <p><strong>Search</strong><br>Find relevant schemes</p>
             </div>
@@ -275,8 +275,8 @@
             <div class="step">
                 <!-- Step 3 SVG -->
                 <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <rect x="5" y="5" width="14" height="14" rx="3" stroke="#030303" stroke-width="2"/>
-                    <path d="M9 12H15M12 9V15" stroke="#030303" stroke-width="2"/>
+                    <rect x="5" y="5" width="14" height="14" rx="3" stroke="#900C3F" stroke-width="2"/>
+                    <path d="M9 12H15M12 9V15" stroke="#900C3F" stroke-width="2"/>
                 </svg>
                 <p><strong>Select & Apply</strong><br>Choose the best scheme</p>
             </div>
@@ -284,7 +284,7 @@
             <div class="step">
                 <!-- Step 4 SVG -->
                 <svg width="60" height="60" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M5 12H19M5 12L9 16M5 12L9 8" stroke="#030303" stroke-width="2"/>
+                    <path d="M5 12H19M5 12L9 16M5 12L9 8" stroke="#900C3F" stroke-width="2"/>
                 </svg>
                 <p><strong>Track Progress</strong><br>Monitor application status</p>
             </div>
