--- a/result.html
+++ b/result.html
@@ -25,6 +25,7 @@
         document.getElementById("maritalStatus").textContent = localStorage.getItem("maritalStatus");
         document.getElementById("disability").textContent = localStorage.getItem("disability");
         document.getElementById("income").textContent = localStorage.getItem("income");
+        document.getElementById("age").textContent = localStorage.getItem("age");
     </script>
 </body>
 </html>
