--- a/result.html
+++ b/result.html
@@ -18,6 +18,7 @@
             <p><strong>Marital Status:</strong> <span id="maritalStatus"></span></p>
             <p><strong>Disability:</strong> <span id="disability"></span></p>
             <p><strong>Annual Income:</strong> <span id="income"></span></p>
+             <p><strong>age:</strong> <span id="age"></span></p>
         </div>
     </div>
     <script>
