--- a/login.html
+++ b/login.html
@@ -57,7 +57,32 @@
             <input type="password" name="password" placeholder="Password" required><br>
             <button type="submit">Login</button>
         </form>
-        <a href="register.html">Don't have an account? Register here</a>
+        <p id="errorMessage" style="color:red;"></p>
+        <p>Not registered yet? <a href="registration.html">Register Here</a></p>
+
+        <script>
+            const form = document.getElementById('loginForm');
+            const errorMessage = document.getElementById('errorMessage');
+            form.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            const formData = new FormData(form);
+            const response = await fetch('/login', {
+                method: 'POST',
+                body: formData
+            });
+            const result = await response.json();
+            if (result.success) {
+                window.location.href = '/result.html';
+            } else if (result.error === 'User not found') {
+                errorMessage.textContent = 'User not registered. Redirecting to registration page...';
+                setTimeout(() => {
+                    window.location.href = '/registration.html';
+                }, 2000);
+            } else {
+                errorMessage.textContent = result.error;
+            }
+            });
+        </script>
     </div>
 </body>
 </html>
