--- a/login.html
+++ b/login.html
@@ -53,12 +53,12 @@
     <div class="container">
         <h2>Login</h2>
         <form action="#" method="POST">
-            <input type="text" name="email_phone" placeholder="Email or Phone Number" required><br>
-            <input type="password" name="password" placeholder="Password" required><br>
+            <input type="email" name="email" placeholder="Enter your email" autocomplete="off" required>
+            <input type="password" name="password" placeholder="Enter your password" autocomplete="off" required><br>
             <button type="submit">Login</button>
         </form>
         <p id="errorMessage" style="color:red;"></p>
-        <p>Not registered yet? <a href="registration.html">Register Here</a></p>
+        <p>Not registered yet?<a href="registration.html">Register Here</a></p>
 
         <script>
             const form = document.getElementById('loginForm');
