--- a/result.html
+++ b/result.html
@@ -18,7 +18,9 @@
             <p><strong>Marital Status:</strong> <span id="maritalStatus"></span></p>
             <p><strong>Disability:</strong> <span id="disability"></span></p>
             <p><strong>Annual Income:</strong> <span id="income"></span></p>
-             <p><strong>age:</strong> <span id="age"></span></p>
+            <p><strong>age:</strong> <span id="age"></span></p>
+            <p><strong>education:</strong> <span id="education"></span></p>
+            
         </div>
     </div>
     <script>
@@ -27,6 +29,7 @@
         document.getElementById("disability").textContent = localStorage.getItem("disability");
         document.getElementById("income").textContent = localStorage.getItem("income");
         document.getElementById("age").textContent = localStorage.getItem("age");
+        document.getElementById("education").textContent = localStorage.getItem("education");
     </script>
 </body>
 </html>
