--- a/disability.html
+++ b/disability.html
@@ -49,7 +49,7 @@
         function nextPage() {
             let disability = document.getElementById("disability").value;
             localStorage.setItem("disability", disability);
-            window.location.href = "result.html"; // Modify this if you have a final results page.
+            window.location.href = "education.html"; // Modify this if you have a final results page.
         }
     </script>
 </body>
